--- a/crx-reloader/manifest.json
+++ b/crx-reloader/manifest.json
@@ -9,7 +9,7 @@
   "default_locale": "en",
   "app": {
     "background": {
-      "scripts": ["main.js"]
+      "scripts": ["lib/main.js"]
     }
   },
   "permissions": [{"socket":["tcp-connect", "tcp-listen"]}]
