--- a/cr-reloader-backend/package.json
+++ b/cr-reloader-backend/package.json
@@ -13,7 +13,8 @@
     "url": "git://github.com/victorhsieh/crx-reloader.git"
   },
   "scripts": {
-    "prepublish": "./node_modules/.bin/lsc -cj package.ls\n./node_modules/.bin/lsc -cbo lib src"
+    "prepublish": "./node_modules/.bin/lsc -cj package.ls\n./node_modules/.bin/lsc -cbo lib src",
+    "publish": "rm ../cr-reloader-backend.zip\nzip -r ../cr-reloader-backend.zip . -x 'node_modules*' 'src*' npm-debug.log '.*.swp'"
   },
   "main": "lib/app.js",
   "engines": {
