--- a/.gitignore
+++ b/.gitignore
@@ -2,5 +2,7 @@
 *.swo
 cr-reloader/lib
 cr-reloader/node_modules
+cr-reloader.zip
 cr-reloader-backend/lib
 cr-reloader-backend/node_modules
+cr-reloader-backend.zip
