Making reloading url possible
 * /r?url=URL_PATTERN
 * /r?ext=EXT_ID

--- a/cr-reloader-backend/manifest.json
+++ b/cr-reloader-backend/manifest.json
@@ -11,5 +11,5 @@
     "scripts": ["lib/app.js"]
   },
   "options_page": "options.html",
-  "permissions": ["management"]
+  "permissions": ["management", "tabs"]
 }
