backend 0.6.1; fix name

--- a/cr-reloader/package.json
+++ b/cr-reloader/package.json
@@ -5,12 +5,12 @@
     ],
     "email": "victor@csie.org"
   },
-  "name": "crx-reloader",
-  "description": "Crx Reloader",
+  "name": "cr-reloader",
+  "description": "Cr Reloader",
   "version": "0.6.1",
   "repository": {
     "type": "git",
-    "url": "git://github.com/victorhsieh/crx-reloader.git"
+    "url": "git://github.com/victorhsieh/cr-reloader.git"
   },
   "scripts": {
     "prepublish": "./node_modules/.bin/lsc -cj package.ls\n./node_modules/.bin/lsc -cbo lib src\n./node_modules/.bin/browserify lib/app.js -o lib/bundle.js\nrm -f lib/app.js",
