--- a/cr-reloader/manifest.json
+++ b/cr-reloader/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "__MSG_appName__",
-  "version": "0.6.1",
+  "version": "0.7.0",
   "manifest_version": 2,
   "description": "__MSG_appDescription__",
   "icons": {
@@ -12,5 +12,7 @@
       "scripts": ["lib/main.js"]
     }
   },
-  "permissions": [{"socket":["tcp-connect", "tcp-listen"]}]
+  "sockets": {
+    "tcpServer": { "listen": ":24601" }
+  }
 }
